--- a/project-service.properties
+++ b/project-service.properties
@@ -1,1 +1,11 @@
 
+spring.datasource.url=jdbc:mysql://localhost:3306/project_db
+spring.datasource.username=root
+spring.datasource.password=prashant
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+
+eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+
+spring.boot.message = Hello, Project Service Spring Cloud Bus Demo1
